network-policies/allow-ingress-to-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - vote-app
          - result
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
          kubernetes.io/metadata.name: ingress-nginx
